[BUGFIX] Remove gap underneath Workspace tabs
In Workspace backend module the gap between tabs
and table is removed.

Resolves: #49133
Releases: 6.2

--- a/typo3/sysext/workspaces/Resources/Public/StyleSheet/module.css
+++ b/typo3/sysext/workspaces/Resources/Public/StyleSheet/module.css
@@ -1,6 +1,7 @@
 
 ul.x-tab-strip.x-tab-strip-top {
 	width: 100%;
+	margin-bottom: 0;
 }
 ul.x-tab-strip.x-tab-strip-top li.last {
 	float: right;
